# photograpy

./: .gitignore  LICENSE  README.md  pyproject.toml
src/photograpy/: __init__.py  base.py  blend.py  filter.py  image.py  layer.py  mask.py
src/photograpy/algorithms/: __init__.py  rgb_hsl.py
src/photograpy/filters/: __init__.py  fourier.py  image.py  interpolate.py  invert.py  sharpen.py
src/photograpy/masks/: __init__.py  custom.py  fourier.py  opacity.py
tests/: test_core.py
