[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "photograpy"
version = "0.0.1"
description = "button-free photo editing"
requires-python = ">=3.12"
classifiers = ["Programming Language :: Python :: 3"]
authors = [{name = "Janis Schertenleib", email="janis.schertenleib@outlook.com"}]

[tool.setuptools]
package-dir = {"" = "src"}
