[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "photograpy"
version = "0.0.1"
description = "button-free photo editing"
requires-python = ">=3.12"
classifiers = ["Programming Language :: Python :: 3"]
authors = [{name = "Janis Schertenleib", email="janis.schertenleib@outlook.com"}]
dependencies = [
    "numpy >= 1.26.4",
    "scipy >= 1.13.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
